--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-a{
-    text-decoration: none;
-}
-
 img{
     height: auto;
     width: 100%; 
@@ -34,9 +30,10 @@ img{
     padding-right: 20px;  
 }
 
-a.prev, a.next{
+.prev, .next{
     font-size: 24px;
     color: white;
+    cursor: pointer;
 }
 
 .img-container{
@@ -44,14 +41,12 @@ a.prev, a.next{
     /* display: none; */
 }
 
-.display-img{
+#display-img{
     width: 100%;
-}
-
-.display-img img{
     position: relative;
     top: -100px;
 }
+
 
 .nav-group{
     text-align: center;
